syntax = "proto3";
import "google/api/annotations.proto";
package pb;
message CreateBucketRequest{
    //request bucket name
    string name = 1;
    //access privileges
    string key = 2;
    //request storage capacity
    uint64 capacity = 3;
    //obejcts limits
    uint64 objects_limit = 4;
}

message CreateBucketResponse{
     //request bucket name
        string name = 1;
     //request storage capacity
        uint64 capacity = 3;
        //obejcts limits
        uint64 objects_limit = 4;
        string bucket_dir=5;
    string message = 6;

}

message DeleteBucketRequest{
    //bucket name
    string name = 1;
}

message DeleteBucketResponse{
       string name = 1;
       string key = 2;
       uint64 capacity = 3;
       uint64 objects_limit = 4;
       uint64 object_count = 5;
       string bucket_dir=6;
       string message = 7;
}

message UpdateBucketRequest{
       string name = 1;
       string key = 2;
       uint64 capacity = 3;
       uint64 objects_limit = 4;
}

message UpdateBucketResponse {
      string name = 1;
      uint64 capacity = 2;
      uint64 objects_limit = 3;
      uint64 object_count = 4;
      string bucket_dir=5;
      string message = 6;
}


